--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
       <div id="game-intro">
-        <img src="/images/game-logo.png" alt="logo-game" id="logo-img" />
+        <img src="images/gamelogo.png" alt="logo-game" id="logo-img" />
         <button id="start-button">Start Game</button>
         <p class="subtitle-comic">Strengthen your memory with DC heroes!</p>
       </div>
@@ -31,7 +31,7 @@
       </div>
 
       <div>
-        <button id="sound"><img src="/images/music-off.png" alt="music-off" id= "music-icon"></button>
+        <button id="sound"><img src="images/musicoff.png" alt="music-off" id= "music-icon"></button>
       </div>
 
     </main>
