--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
       </div>
 
     </main>
+    
+    <div id="comic-balloon" class="hidden">Out of Moves!</div>
 
     <script src="game.js"></script>
     <script src="easteregg.js"></script>
