--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/style.css"/>
     <title>DC Memory Game</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   </head>
   <body>
     <main>
@@ -38,8 +39,8 @@
     
     <div id="comic-balloon" class="hidden">Out of Moves!</div>
 
-    <script src="game.js"></script>
-    <script src="easteregg.js"></script>
-    <script src="script.js"></script>
+    <script src="js/game.js"></script>
+    <script src="js/easteregg.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
